--- a/graduatetracer/tracer/templates/tracer/admin/topbar.html
+++ b/graduatetracer/tracer/templates/tracer/admin/topbar.html
@@ -68,7 +68,12 @@
               </div>
               <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
               <div class="modal-footer">
-                  <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
+                <span class="icon text-white">
+                  <button class="btn btn-secondary" type="button" data-dismiss="modal"></i>Cancel</button>
+                  
+                 
+                </span>
+                
                   <a class="btn btn-danger" href="{% url 'logout' %}">Logout</a>
               </div>
           </div>
