--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="col-lg-9 mt-1">
     <div class="row justify-content-center mt-4 mb-5">
-      <div style="margin-top: 40px" class="card w-80">
+      <div id = "userpost" style="margin-top: 40px" class="card w-80">
         <div class="card-header">
           <strong>ADD POST!</strong>
         </div>
@@ -125,7 +125,7 @@
                 <img class="img-profile rounded-circle shadow-sm" src="{{grad_info.profile_picture}} " width=" 50" height="50" alt="User-Profile-Image"/>
             </div>
           </div>
-
+          
           <div  class="card-body">
               <div class="row">
                 <div class="col-sm-3">
