--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -2,19 +2,13 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<!-- <style>
-.l-cnt {
-  padding: 20px;
-  background-color: #fff;
-  box-shadow: 0px 3px 3px #ddd;
-  width: 518px;
-  img {
-    border-radius: 50%;
-   width: 200px;
-   
- }
+ <!-- <style>
+#profile-pic {
+    width: 180px;
+    height: 180px;
+    border-radius: 93px;
 }
-</style> -->
+</style>  -->
 <div id="profile-upper">
     <div id="profile-banner-image">
       <img src="https://dl.dropbox.com/s/raiecd5lbrkc1uw/239888289_1768773953323405_6641976422482278421_n.jpg?dl=0" alt="Banner image">
@@ -88,7 +82,7 @@
                       <h6 class="mb-0"><i class="fa fa-child" style="font-size:24px;color:#4267b2" aria-hidden="true"></i></h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.age}}
+                     {{user.age}} years old
                     </div>
                   </div>
                   <hr>
