--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -286,7 +286,7 @@
 
     </div>
   </div>
-  <link href="{% static 'css/Userdis.css' %}" rel="stylesheet">
+  <link href="{% static 'css/Display.css' %}" rel="stylesheet">
 
  
 
