--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -55,7 +55,7 @@
                       <h6 class="mb-0"><i class="fa fa-graduation-cap"  style="font-size:24px; color:#4267b2" ></i></h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      {{user.school}}
+                     Studied at {{user.school}}
                     </div>
                   </div>
                   <hr>
@@ -110,7 +110,7 @@
                       <h6 class="mb-0"><i class="fa fa-home" style="font-size:24px;color:#4267b2"></i></h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                     {{user.address}}
+                     Lives in {{user.address}}
                     </div>
                   </div>
                     <hr>
@@ -199,7 +199,7 @@
       
       <div class="td" id="m-col"> 
         <div class="card-header">
-          <strong>ADD POST!</strong>
+          <strong>What's new?</strong>
           <button type="button "class="btn btn-light btn-lg btn-block" data-toggle="modal" data-target=".bd-example-modal-lg" style="border-radius: 12px" >
             <h6><em> type something here...</em></h6>
           </button>
