--- a/graduatetracer/tracer/templates/tracer/admin/users.html
+++ b/graduatetracer/tracer/templates/tracer/admin/users.html
@@ -46,7 +46,7 @@
 
 
     .btn {
-      background-color: #ddd !important;
+      background-color: #fff !important;
       border: none !important;
       color: black !important;
       padding: 8px 13px !important;
