--- a/graduatetracer/tracer/templates/tracer/admin/pending.html
+++ b/graduatetracer/tracer/templates/tracer/admin/pending.html
@@ -95,9 +95,9 @@
                   {{gradAcct.date_graduated}}
                 </td>
                 <td class="text-center">
-                    <div class="pl-2 pr-2 pb-2 pt-1">
-                        <a class="btn btn-success" href="{% url 'userinformation' gradAcct.id %}"><i class="fas fa-eye"></i></a>
-                    </div>
+                    
+                        <a class="btn-outline-primary" href="{% url 'userinformation' gradAcct.id %}"><i class="fas fa-eye"></i></a>
+                   
                 </td>
             </tr>
             {% endif %}
