--- a/graduatetracer/tracer/templates/tracer/user/post_list.html
+++ b/graduatetracer/tracer/templates/tracer/user/post_list.html
@@ -49,21 +49,20 @@
         <div style="border: 0!important; margin-bottom: 15px;" class="col-md-12 col-lg-12 col-sm-12 border-bottom position-relative">
             <div style="width: 50%; margin-right: auto; margin-left: auto; box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px!important;" class="shadow p-3 mb-2 mb-0 bg-white rounded">
                 <div class="card-header bg-trasparent border-none" style="background-color: #fff;">
-                    <a class="nav-link" id="{% url 'DisplayGradInfo' %}" href="{% url 'DisplayGradInfo' %}">
-                        <img class="img-profile1 rounded-circle" src="{{request.user.profile_picture.url}}" width=" 40" height="40" alt="User-Profile-Image">
-                        <span style="font-size: 14px;" class="mr-2 d-none d-lg-inline text-gray-700 small"><strong>{{user.first_name}} {{user.middle_name}} {{user.last_name}}</strong></span>
+                    <a class="nav-link">
+                        <img style="margin-top: -31px;" class="img-profile1 rounded-circle" src="{{post.author.profile_picture.url}}" width=" 40" height="40" alt="User-Profile-Image">
+                        <span style="font-size: 14px;" class="mr-2 d-none d-lg-inline text-gray-700 small"><strong style="margin-top: 20px!important;" >{{post.author.first_name}} {{post.author.middle_name}} {{post.author.last_name}}</strong></span>
                     </a>
                     <div class="mt-0 text-dark">
-                        <font class="font1" size="">{{ post.created_on }}</font>
+                        <font class="font1" size="">{{post.created_on}}</font>
                     </div>
                     <!-- {% if request.user == post.author %}
             					<a href="{% url 'post-edit' post.pk %}" style="color: #333;"><i class="far fa-edit"></i></a>
             					<a href="{% url 'post-delete' post.pk %}" style="color: #333;"><i class="fas fa-trash"></i></a>
             				{% endif %} -->
                 </div>
-                  <label style="left: 498px; top: -61px;" class="dropdown">
-                    <div class="dd-button">
-                    </div>
+                  <!-- <label style="left: 498px; top: -61px;" class="dropdown">
+                    <i class='bi bi-three-dots-vertical'></i>
 
                     <input type="checkbox" class="dd-input" id="test">
 
@@ -71,10 +70,18 @@
                       <li><a style="text-decoration: none; color: black" href="{% url 'post-edit' post.pk %}">Edit</a></li>
                       <li><a style="text-decoration: none; color: black" href="{% url 'post-delete' post.pk %}">Delete</a></li>
                     </ul>
-                  </label>
+                  </label> -->
+                  <div style="left: 510px; top: -85px;" class="dropdown">
+                    <button class="bi bi-three-dots-vertical btn default" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item" href="{% url 'post-edit' post.pk %}"><i class="fa fa-pencil"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Edit</a>
+                      <a class="dropdown-item" href="{% url 'post-delete' post.pk %}"><i class="fa fa-trash"></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Delete</a>
+                    </div>
+                  </div>
 
                 <div class="card-body" style=" background-color: #fff !important;color: black;">
-                    <p>{{ post.body }}</p>
+                    <p style="margin-top: -49px;">{{ post.body }}</p>
                     <div class="position-relative text-brown mt-1">
                     {% if post.image %}
                         <img src="{{ post.image.url }}" class="post-image" />
@@ -84,7 +91,7 @@
                     </div>
                 </div>
                     <div class="card-footer row w-100 m-auto">
-                      <div class="col-lg-4 col-md-4 col-sm-4 text-center">
+                      <div style="left: -4px;" class="col-lg-4 col-md-4 col-sm-4 text-center">
                         <form method="POST" action="{% url 'like' post.pk %}">
                             {% csrf_token %}
                             <input type="hidden" name="next" value="{{ request.path }}">
@@ -93,6 +100,7 @@
                               <i class="fa fa-thumbs-up fa-lg" aria-hidden="true" type="submit">
                                 <span style="font-size: 14px"> {{ post.likes.all.count }} </span>
                               </i>
+                              &nbsp;&nbsp;&nbsp;Like
                             </button>
                             <!-- </button> -->
                         </form>
@@ -106,6 +114,7 @@
                             <i class="fa fa-thumbs-down fa-lg" aria-hidden="true" type="submit">
                               <span style="font-size: 14px"> {{ post.dislikes.all.count }} </span>
                             </i>
+                            &nbsp;&nbsp;&nbsp;Dislike
                           </button>
                           <!-- </button> -->
                         </form>
@@ -113,8 +122,8 @@
                       <div class="col-lg-4 col-md-4 col-sm-4 text-center">
                         <!-- <button class="btn"> -->
                           <!-- <a class="tatacom" style="text-decoration: none;" href="{% url 'post-detail' post.pk %}"></a> -->
-                          <button type="button" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter">
-                            Comment
+                          <button type="button" class="btn default" data-toggle="modal" data-target="#exampleModalCenter"><i style="font-size: 19px;" class="fa fa-comment"></i>
+                            &nbsp;&nbsp;&nbsp;Comment
                           </button>
                           <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                             <div class="modal-dialog modal-dialog-centered" role="document">
