--- a/graduatetracer/tracer/templates/tracer/user/template.html
+++ b/graduatetracer/tracer/templates/tracer/user/template.html
@@ -22,6 +22,8 @@
     <link href="{% static 'css/DisplayInfoCSS.css' %}" rel="stylesheet">
     <link href="{% static 'css/friendlistCss.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Chatbot Css -->
     <link href="{% static 'css/chatbot.css' %}" rel="stylesheet">
 
