--- a/graduatetracer/tracer/templates/tracer/user/template.html
+++ b/graduatetracer/tracer/templates/tracer/user/template.html
@@ -22,13 +22,17 @@
     <link href="{% static 'css/DisplayInfoCSS.css' %}" rel="stylesheet">
     <link href="{% static 'css/friendlistCss.css' %}" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Chatbot Css -->
     <link href="{% static 'css/chatbot.css' %}" rel="stylesheet">
 
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <script src="https://use.fontawesome.com/fe459689b4.js"></script>
+    <!-- For Modal sa Comment -->
+    <script src="{% static 'js/modal_comment.js' %}"></script>
 </head>
 
 <body id="page-top" onload="side_bar_active()">
