--- a/graduatetracer/static/css/Display.css
+++ b/graduatetracer/static/css/Display.css
@@ -381,7 +381,7 @@
       padding: 0px 8px;
       vertical-align: middle;
     }
-    
+   
     #p-link {
       display: block;
       width: 34px;
@@ -528,6 +528,8 @@
       background-color: #fff;
       box-shadow: 0px 3px 3px #ddd;
       width: 598px;
+
+      border-top-left-radius: 25px;
     }
     
     .l-mrg {
