--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -131,7 +131,8 @@
   <div id="main-content">
     <div class="tb">
       <div class="td" id="l-col">
-        <div id= "info" class="l-cnt">
+        <div id= "info" class="l-cnt" style=" 
+        border-top-left-radius: 25px;">
           <div class="cnt-label">
             <i class="l-i" id="l-i-i"></i>
             <span>Personal Information</span>
@@ -163,7 +164,13 @@
                       {{user.contact_number}}
                     </div>
                   </div>
-                  <hr>
+           
+                  
+                  <div class="row">
+                    <div class="col">
+                      <div class="collapse multi-collapse" id="multiCollapseExample1">
+                        
+                 <hr>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-id-card" style="font-size:24px;color:#4267b2"></i></h6>
@@ -246,8 +253,13 @@
                     </div>
                   </div>
           </div>
+          </div>
+          </div>
+          </div>
         </div>
-        <button onclick="myFunction()">See more info...</button>
+        <br>
+        <br>
+        <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">... See more</a>
         <div class="l-cnt l-mrg">
           <div class="cnt-label">
             <i class="l-i" id="l-i-p"></i>
@@ -258,20 +270,20 @@
            {% if grad_info.email != request.user.email %}
           <div class="main" >
             <div class="inner" style="font-size: 25px;" >
-                <!-- <script>
-                    document.write(" <table border=2px solid black>")
-                    for (rows = 1; rows <= 4; rows++) {
-                        document.write(" <tr> ")
-                        for (col = 1; col <= 5; col++) {
-                          console.log(img src="{{grad_info.profile_picture.url }}")
-                            // document.write(" <td style= padding:10px > Row number is " + rows + " <br>img src="{{grad_info.profile_picture.url }}" + col + " </td> ")
-                        }
-                        document.write(" </tr> ")
+              <script>
+                document.write(" <table border=2px solid black>")
+                for (rows = 1; rows <= 4; rows++) {
+                    document.write(" <tr> ")
+                    for (col = 1; col <= 5; col++) {
+                        document.write(" <td style= padding:10px >  src="{{user.profile_picture.url}}" + rows + " <br> Column number is " + col + " </td> ")
                     }
-                    document.write("</table>")
-                </script> -->
+                    document.write(" </tr> ")
+                }
+                document.write(" </table> ")
+            </script>
             </div>
         </div>
+        
                    {% endif %}
              {% endif %}
            {% endfor %}
