--- a/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
+++ b/graduatetracer/tracer/templates/tracer/user/DisplayInfo.html
@@ -2,19 +2,41 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<head>
-<style>
-  body {font-family: Arial, Helvetica, sans-serif;}
 
-#photo{
+<style>
+  body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+#myImg{
   border-radius: 5px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#photo:hover {opacity: 0.7;}
-
+#myImg:hover {
+  opacity: 0.7;
+}
+.text-secondary {
+    color: #212529!important;
+}
+.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
+    color: #fff;
+    background-color: #ffffff;
+    border-color: #ffffff;
+    animation: none;
+}
+.btn-primary {
+    color: black;
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+    color:rgb(88, 86, 86);
+    background-color: #ffffff;
+    border-color: #ffffff;
+}
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
@@ -93,8 +115,8 @@
   }
 }
 </style>
-</head>
-<body>
+
+
 <div id="profile-upper">
     <div id="profile-banner-image">
       <img src="https://dl.dropbox.com/s/raiecd5lbrkc1uw/239888289_1768773953323405_6641976422482278421_n.jpg?dl=0" alt="Banner image">
@@ -102,9 +124,8 @@
    
     <div id="profile-d" >    
         <div class="profile-pic-div" >
-          <img  src="{{user.profile_picture.url}}" alt="Snow" id="photo">
-        <input type="file" id="file" name="profile" hidden>
-        <label for="file" id ="uploadBtn">Chose Photo</label>
+          <img id="myImg" src="{{user.profile_picture.url}}" alt="Snow" >
+        
       </div>
       <div id="u-name">{{user.first_name}} {{user.middle_name}} {{user.last_name}}</div>
       <div class="pg-sub-title">Alumni</div>
@@ -121,11 +142,12 @@
     <div id="black-grd"></div>
   </div>
   <!-- modal for viewing picture -->
-  <div id="myModal" class="modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="img01">
-    <div id="caption"></div>
-  </div>
+ <!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
   
   <!-- ends here -->
   <div id="main-content">
@@ -146,7 +168,7 @@
                       {{user.email}}
                     </div>
                   </div>
-                  <hr>
+                  <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-graduation-cap"  style="font-size:24px; color:#4267b2" ></i></h6>
@@ -155,7 +177,7 @@
                      Studied at {{user.school}}
                     </div>
                   </div>
-                  <hr>
+                  <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-phone" style="font-size:24px;color:#4267b2"></i></h6>
@@ -164,13 +186,18 @@
                       {{user.contact_number}}
                     </div>
                   </div>
-           
-                  
+                  <br>
+                  <div class="row" id="btn">
+                    <div class="col-sm-3">
+                      <h6 class="mb-0">...</i></h6>
+                    </div>
+                    <div class="col-sm-9 text-secondary">
+                      <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1" style="margin-left: -13px;">See more info</a>
+                    </div>
+                  </div>
                   <div class="row">
                     <div class="col">
                       <div class="collapse multi-collapse" id="multiCollapseExample1">
-                        
-                 <hr>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-id-card" style="font-size:24px;color:#4267b2"></i></h6>
@@ -179,7 +206,7 @@
                       {{user.IDNum}}
                     </div>
                   </div>
-                  <hr>
+                  <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-child" style="font-size:24px;color:#4267b2" aria-hidden="true"></i></h6>
@@ -188,7 +215,7 @@
                      {{user.age}} years old
                     </div>
                   </div>
-                  <hr>
+                  <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-birthday-cake"style="font-size:24px;color:#4267b2" aria-hidden="true"></i></h6>
@@ -197,7 +224,7 @@
                      {{user.birth_date}}
                     </div>
                   </div>
-                  <hr>
+                  <br>
 
                   <div class="row">
                     <div class="col-sm-3">
@@ -207,7 +234,7 @@
                      {{user.gender}}
                     </div>
                   </div>
-                  <hr>
+                  <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fa fa-home" style="font-size:24px;color:#4267b2"></i></h6>
@@ -216,7 +243,7 @@
                      Lives in {{user.address}}
                     </div>
                   </div>
-                    <hr>
+                    <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class='fas fa-book-reader' style='font-size:24px;color:#4267b2'></i></h6>
@@ -225,7 +252,7 @@
                      {{user.course_type}}
                     </div>
                   </div>
-                    <hr>
+                    <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class='fa fa-briefcase' style='font-size:24px;color:#4267b2'></i></h6>
@@ -234,7 +261,7 @@
                      {{user.employment_status}}
                     </div>
                   </div>
-                      <hr>
+                      <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class="fas fa-user-tie"  style="font-size:24px;color:#4267b2"></i></h6>
@@ -243,7 +270,7 @@
                      {{user.job_description}}
                     </div>
                   </div>
-                    <hr>
+                    <br>
                   <div class="row">
                     <div class="col-sm-3">
                       <h6 class="mb-0"><i class='fas fa-tools' style='font-size:24px;color:#4267b2'></i></h6>
@@ -259,7 +286,7 @@
         </div>
         <br>
         <br>
-        <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">... See more</a>
+       
         <div class="l-cnt l-mrg">
           <div class="cnt-label">
             <i class="l-i" id="l-i-p"></i>
@@ -270,17 +297,7 @@
            {% if grad_info.email != request.user.email %}
           <div class="main" >
             <div class="inner" style="font-size: 25px;" >
-              <script>
-                document.write(" <table border=2px solid black>")
-                for (rows = 1; rows <= 4; rows++) {
-                    document.write(" <tr> ")
-                    for (col = 1; col <= 5; col++) {
-                        document.write(" <td style= padding:10px >  src="{{user.profile_picture.url}}" + rows + " <br> Column number is " + col + " </td> ")
-                    }
-                    document.write(" </tr> ")
-                }
-                document.write(" </table> ")
-            </script>
+              
             </div>
         </div>
         
@@ -398,12 +415,11 @@
   <link href="{% static 'css/Display.css' %}" rel="stylesheet">
 
   <script src="{% static '/js/user/profile.js' %}"></script>
-  <!-- <script>
-    // Get the modal
+  <script> // Get the modal
     var modal = document.getElementById("myModal");
     
     // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img = document.getElementById("photo");
+    var img = document.getElementById("myImg");
     var modalImg = document.getElementById("img01");
     var captionText = document.getElementById("caption");
     img.onclick = function(){
@@ -419,15 +435,19 @@
     span.onclick = function() { 
       modal.style.display = "none";
     }
-    function myFunction() {
-  var x = document.getElementById("i-box");
-  if (x.style.display === "none") {
-    x.style.display = "block";
-  } else {
-    x.style.display = "none";
-  }
-}
-    </script> -->
+    </script>
+   <script>
+   
+const btn = document.getElementById('btn');
 
+btn.addEventListener('click', () => {
+  //  hide button
+  btn.style.display = 'none';
+
+  //  show div
+ const box = document.getElementById('box');
+  box.style.display = 'block';
+});
+
+</script>
     {% endblock %}
-  </body>
